@@ -509,7 +509,6 @@ Exactly one rule must apply</property>
 </widget>
 
 <widget class="GtkDialog" id="filter_list">
-  <property name="visible">True</property>
   <property name="title" translatable="yes"></property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_NONE</property>
@@ -540,7 +539,7 @@ Exactly one rule must apply</property>
 	  <property name="layout_style">GTK_BUTTONBOX_END</property>
 
 	  <child>
-	    <widget class="GtkButton" id="button1">
+	    <widget class="GtkButton" id="close">
 	      <property name="visible">True</property>
 	      <property name="can_default">True</property>
 	      <property name="can_focus">True</property>
@@ -554,7 +553,7 @@ Exactly one rule must apply</property>
 	  </child>
 
 	  <child>
-	    <widget class="GtkButton" id="button10">
+	    <widget class="GtkButton" id="help">
 	      <property name="visible">True</property>
 	      <property name="can_default">True</property>
 	      <property name="can_focus">True</property>
@@ -649,7 +648,7 @@ Exactly one rule must apply</property>
 		  <property name="spacing">6</property>
 
 		  <child>
-		    <widget class="GtkButton" id="button3">
+		    <widget class="GtkButton" id="add">
 		      <property name="visible">True</property>
 		      <property name="tooltip" translatable="yes">Add a new filter</property>
 		      <property name="can_default">True</property>
