@@ -1,3 +1,14 @@
+2006-06-03  Don Allingham  <don@gramps-project.org>
+	* src/FilterEditor/_ShowResults.py: move glade functions to 
+	ManagedWindow
+	* src/FilterEditor/_EditFilter.py: move glade functions to 
+	ManagedWindow
+	* src/FilterEditor/_FilterEditor.py: move glade functions to 
+	ManagedWindow
+	* src/FilterEditor/_EditRule.py: move glade functions to 
+	ManagedWindow
+	* src/ManagedWindow.py: move glade functions to ManagedWindow
+
 2006-06-02  Brian Matherly  <brian@gramps-project.org>
 	* src/docgen/*: use IndexMark
 	* src/plugins/DetDecendantReport: use IndexMark
